# RAG_COMMANDER

./: .gitignore  EXTERNAL_ACCESS_SETUP.md  FILE_LOCATION_GUIDE.md  LANGGRAPH_LLM_VALIDATION_GUIDE.md  LLM_VALIDATION_NODE_GUIDE.md  MUCK_USAGE_GUIDE.md  POLICY_AGENT_INTEGRATION_GUIDE.md  PROJECT_ARCHITECTURE.md  PROJECT_STRUCTURE.md  RAILWAY_DEPLOYMENT.md  README.md  age_population.sql  clear_notebook_outputs.py  credentials.json  pyproject.toml  test.md  test_location_insight.py  주택청약FAQ_temp.csv
.claude/: settings.local.json
.streamlit/: config.toml
pgdata/: postmaster.pid
pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
policy_agent_design/: README.md  batch_config.yaml  policy_prompt.yaml  real_estate_policy_agent.py  requirements.txt  run_analysis.py  test_system.py
policy_report_reference/: comp.md  comp1-1.md  comp1-2.md  comp1-3.md  comp1-5.md  comp1-6.md
src/chatbot/: README.md
src/data/: (05년-24년)착공_연도별,월별,지역별.xlsx  202509_연령층 분포 인구.xlsx  org_source_site.md  서울 자치구별 GRDP(2018-2022)-최종.xlsx  서울 자치구별+경제활동별+지역내총생산(2018-2022).xlsx  인구이동_전출입_2024년(연간) - 최종.xlsx  인구이동_전출입_2025년(1월).xlsx  인구이동_전출입_2025년(2월).xlsx  인구이동_전출입_2025년(3월).xlsx  인구이동_전출입_2025년(4월).xlsx  인구이동_전출입_2025년(5월).xlsx  인구이동_전출입_2025년(6월).xlsx  인구이동_전출입_2025년(7월).xlsx  인구이동_전출입_2025년(8월).xlsx
src/fastapi/: main_api.py
src/lab/: asd.ipynb  check_data.py  debug_api_keys.ipynb  earth.ipynb  gemini_test.py  github_test.ipynb  housing_faq_agent_run.ipynb  kosis.ipynb  kostat_api.ipynb  map.html  map_test.ipynb  national_housing_starts_summary_05-24.csv  naver_land_craw_test.ipynb  perplexity_test.py  perplexity_tool_llm_test.py  rag_test.ipynb  rate.ipynb  regional_housing_starts_summary_05-24.csv  rent_rate.ipynb  retriever_housing_faq.ipynb  sample_supply_data.xlsx  search.ipynb  send_gmail.ipynb  setting_test.ipynb  test.ipynb  test.py  test2.ipynb  test_interest_rate_tool.ipynb  testtest.ipynb  token.json  web_crowling.py  web_crowling_test.ipynb  web_crowling_test2.py  web_crqwling_studio.py  공급현황.ipynb  공급현황_10년월별_가이드.md  공급현황_상세분석.ipynb  국가적정책.ipynb  국토교통부_부동산정책_2024_2025.xlsx  금리비교_10년.csv  (+17 more)
src/labbing_test/: ai_model_test.ipynb  llm_test.ipynb  mcp_client.py  mcp_client_test.py  naver_land_craw.ipynb  naver_land_craw_test.ipynb  perplexity_llm_test.py  perplexity_tool_llm_test.py  r_one_api.ipynb  rag_test.ipynb  test.ipynb  test_test.ipynb
src/prompts/: PromptMananger.py  PromptType.py  __init__.py  (+15 more)
(+493 files in other folders)
