[project]
name = "rag-commander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-openai>=1.0.0",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0.0",
    "pdfminer>=20191125",
    "pi-heif>=1.1.1",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.12",
    "unstructured>=0.18.15",
]
