[project]
name = "rag-commander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.57.0",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-experimental>=0.0.42",
    "langchain-openai>=1.0.0",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0.0",
    "pdfminer>=20191125",
    "pgvector>=0.4.1",
    "pi-heif>=1.1.1",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.26.5",
    "pypdf>=4.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "tavily-python>=0.7.12",
    "unstructured>=0.18.15",
]
